# ILS2.0

./: .dockerignore  .env.docker  .env.example  .env.example.production  .env.queues.example  .env.railway  .env.railway.example  .env.railway.template  .env.scalability.example  .env.storage.example  .env.test  .eslintignore  .eslintrc.json  .gitignore  .railwayignore  .replit  ACTION_PLAN_FOR_FULL_FUNCTIONALITY.md  ACTUAL_PLATFORM_FEATURES.md  AIASSISTANT_FIXES_QUICK_REF.md  AIASSISTANT_FIXES_SUMMARY.md  AIASSISTANT_VERIFICATION_REPORT.md  AI_ACCESS_FOR_PAID_USERS.md  AI_ACCESS_IMPLEMENTATION_SUMMARY.md  AI_ASSISTANT_IMPLEMENTATION.md  AI_COMPREHENSIVE_TEST_SUMMARY.md  AI_CONSOLIDATION_COMPLETE.md  AI_CONSOLIDATION_IMPLEMENTATION_COMPLETE.md  AI_CONSOLIDATION_STRATEGY.md  AI_CONSOLIDATION_TEST_RESULTS.md  AI_ENGINE_ARCHITECTURE.md  AI_ENGINE_QUICK_INTEGRATION_GUIDE.md  AI_FEATURES_COMPLETE.md  AI_FIX_COMPLETE.md  AI_IMPLEMENTATION_SUMMARY.md  AI_ML_FEATURES.md  AI_ML_INTEGRATION_AUDIT.md  AI_ML_PLATFORM.md  AI_OCR_TESTING_GUIDE.md  AI_PLATFORM_CHUNKS_1-5_SUMMARY.md  AI_PLATFORM_LIVE_SUMMARY.md  (+491 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.railway/: config.json
ai-service/: .dockerignore  .env.example  AI_SERVICE_CAPABILITIES.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.old  README.md  app.py  config.py  nixpacks.toml  railway.json  railway.toml  railway.toml.old  requirements-lite.txt  requirements-railway.txt  (+5 more)
native/: Cargo.toml
native/ils-core/: Cargo.toml
native/ils-core/src/: anomaly.rs  forecasting.rs  lib.rs  statistics.rs
(+1710 files in other folders)
