[workspace]
resolver = "2"
members = [
    "ils-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/newvantageco/ILS2.0"

[workspace.dependencies]
# Node.js bindings
napi = { version = "2.16", default-features = false, features = ["napi8", "async", "serde-json"] }
napi-derive = "2.16"

# Statistical and ML libraries
ndarray = "0.15"
ndarray-stats = "0.5"
noisy_float = "0.2"
statrs = "0.16"
linfa = "0.7"
linfa-linear = "0.7"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Build dependencies
napi-build = "2.1"
