[package]
name = "ils-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
statrs = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
